# ProceduralAnimation

./: CMakeLists.txt  README.md
src/: BodySim.h  LegKinematics.h  PVector.h  ParticleSystem.h  main.cpp
